--- a/index.html
+++ b/index.html
@@ -17,7 +17,30 @@
             <button class="botao">Criar um portfolio</button>
             <button class="botao">Atualizar meu currículo</button>
         </div>
+        <div class="abas-textos">
+            <div class="abas-conteudo">
+                <h3 class="abas-conteudo-titulo-principal"> Estudar 4 cursos na Alura</h3>
+                <h4 class="abas-conteudo-titulo-secundario"> Tempo para completar o objetivo</h4>
+            </div>
+
+            <div class="abas-conteudo">
+                <h3 class="abas-conteudo-titulo-principal"> Estudar 5 cursos na Javascript</h3>
+                <h4 class="abas-conteudo-titulo-secundario"> Tempo para completar o objetivo</h4>
+            </div>
+
+            <div class="abas-conteudo">
+                <h3 class="abas-conteudo-titulo-principal"> Criar um portifólio com os 3 melhores projetos</h3>
+                <h4 class="abas-conteudo-titulo-secundario"> Tempo para completar o objetivo</h4>
+            </div>
+
+            <div class="abas-conteudo">
+                <h3 class="abas-conteudo-titulo-principal"> Atualizar meu curriculo com os certificados da alura</h3>
+                <h4 class="abas-conteudo-titulo-secundario"> Tempo para completar o objetivo</h4>
+            </div>
+
+        </div>
     </section>
+    <script src="main.js"></script>
 </body>
 
 </html>
